# VectorBench

./: .env  .gitignore  README.md  benchmark.py  engine.py  pyproject.toml  test.py
data/: download.py
indexes/: HNSW.py  IVF.py  PQ.py  base.py
retrieval/: filter.py  fusion.py
src/vectorbench_faiss/: engine.py
src/vectorbench_faiss/data/: chunk.py  embed.py
src/vectorbench_faiss/indexes/: hnsw.py  ivf.py  pq.py
src/vectorbench_faiss/retrieval/: bm25.py
test_exps/: test.py  test_2.py  test_benchmark.py
