[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[project]
name = "vectorbench-faiss"
version = "0.1.0"
description = "A benchmarking playground for FAISS vector indexes with hybrid BM25 + vector retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "numpy>=2.5.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]

[project.optional-dependencies]
data = [
    "datasets>=5.0.0",
    "pandas>=3.0.3",
]
dashboard = [
    "streamlit>=1.59.1",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
